--- a/src/style.css
+++ b/src/style.css
@@ -127,4 +127,16 @@ pre > code {
   }
 }
 
+/* Always show scroll bars */
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
+
 /* purgecss end ignore */
